--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
 
   <!-- API Key -->
   <div class="api-section" id="apiSection">
-    <label>OpenAI API Key（画像分析＆採点に使用）</label>
-    <input type="password" id="apiKey" placeholder="sk-..." />
+    <label>Gemini API Key（無料で取得：<a href="https://aistudio.google.com/apikey" target="_blank" style="color:#ffd93d;">こちら</a>）</label>
+    <input type="password" id="apiKey" placeholder="AIza..." />
     <br><br>
     <button class="btn btn-start" onclick="startGame()">🎮 ゲームスタート</button>
   </div>
@@ -363,8 +363,8 @@ function shuffleArray(arr) {
 
 function startGame() {
   apiKey = document.getElementById('apiKey').value.trim();
-  if (!apiKey.startsWith('sk-')) {
-    alert('OpenAI APIキーを入力してください');
+  if (!apiKey.startsWith('AIza')) {
+    alert('Gemini APIキーを入力してください（AIza...で始まるキー）');
     return;
   }
   document.getElementById('apiSection').style.display = 'none';
@@ -430,54 +430,49 @@ async function submitAnswer() {
   const img = usedImages[currentRound];
 
   try {
-    const response = await fetch('https://api.openai.com/v1/chat/completions', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': `Bearer ${apiKey}`
-      },
-      body: JSON.stringify({
-        model: 'gpt-4o',
-        messages: [
-          {
-            role: 'system',
-            content: `あなたは「言語化力」を採点するAI審査員です。
-ユーザーが画像を見て書いた説明文を、以下の3つの観点で採点してください。
+    // First fetch the image and convert to base64
+    const imgResponse = await fetch(img.url);
+    const imgBlob = await imgResponse.blob();
+    const base64 = await new Promise(resolve => {
+      const reader = new FileReader();
+      reader.onloadend = () => resolve(reader.result.split(',')[1]);
+      reader.readAsDataURL(imgBlob);
+    });
+
+    const prompt = `あなたは「言語化力」を採点するAI審査員です。
+この画像に対するユーザーの説明文を、以下の3つの観点で採点してください。
 
 1. 的確さ (accuracy): 画像の内容を正確に捉えているか (0-100)
-2. 網羅性 (coverage): 重要な要素をどれだけカバーしているか (0-100)  
+2. 網羅性 (coverage): 重要な要素をどれだけカバーしているか (0-100)
 3. 表現力 (expression): 簡潔で分かりやすい表現ができているか (0-100)
 
-必ず以下のJSON形式のみで返答してください:
-{
-  "accuracy": 数値,
-  "coverage": 数値,
-  "expression": 数値,
-  "total": 3つの平均(小数点切り捨て),
-  "feedback": "良かった点と改善点を2-3文で。具体的に何が足りなかったか、何が上手かったかを指摘。"
-}`
-          },
-          {
-            role: 'user',
-            content: [
-              { type: 'image_url', image_url: { url: img.url } },
-              { type: 'text', text: `この画像に対するユーザーの説明文:\n\n「${input}」\n\n上記の説明文を採点してください。JSON形式で返答してください。` }
-            ]
-          }
-        ],
-        max_tokens: 500,
-        temperature: 0.3
+ユーザーの説明文:
+「${input}」
+
+必ず以下のJSON形式のみで返答してください（他のテキストは不要）:
+{"accuracy": 数値, "coverage": 数値, "expression": 数値, "total": 3つの平均(小数点切り捨て), "feedback": "良かった点と改善点を2-3文で"}`;
+
+    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        contents: [{
+          parts: [
+            { inline_data: { mime_type: imgBlob.type, data: base64 } },
+            { text: prompt }
+          ]
+        }],
+        generationConfig: { temperature: 0.3, maxOutputTokens: 500 }
       })
     });
 
     const data = await response.json();
     if (data.error) throw new Error(data.error.message);
 
-    let content = data.choices[0].message.content;
-    // Extract JSON from markdown code blocks if present
+    let content = data.candidates[0].content.parts[0].text;
     const jsonMatch = content.match(/```(?:json)?\s*([\s\S]*?)```/);
     if (jsonMatch) content = jsonMatch[1];
-    const result = JSON.parse(content);
+    const result = JSON.parse(content.trim());
 
     showScore(result, img, input);
   } catch (e) {
