--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ function shuffleArray(arr) {
 }
 
 function startGame() {
-  apiKey = 'AIzaSyATgKkAXfe9jkQsYO4fIRFe1iMrLtB5wAo';
+  apiKey = 'AIzaSyCAvxpfQ0F4e4vNKSY8d4RynKs81aym4m8';
   document.getElementById('apiSection').style.display = 'none';
   document.getElementById('gameArea').style.display = 'block';
   usedImages = shuffleArray(IMAGES);
@@ -445,7 +445,7 @@ async function submitAnswer() {
 必ず以下のJSON形式のみで返答してください（他のテキストは不要）:
 {"accuracy": 数値, "coverage": 数値, "expression": 数値, "total": 3つの平均(小数点切り捨て), "feedback": "良かった点と改善点を2-3文で"}`;
 
-    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-lite:generateContent?key=${apiKey}`, {
+    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${apiKey}`, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({
