--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ async function submitAnswer() {
             { text: prompt }
           ]
         }],
-        generationConfig: { temperature: 0.3, maxOutputTokens: 500, responseMimeType: "application/json" }
+        generationConfig: { temperature: 0.3, maxOutputTokens: 1000, responseMimeType: "application/json", thinkingConfig: { thinkingBudget: 0 } }
       })
     });
 
