--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#0a0a0a">
+<link rel="manifest" href="manifest.json">
+<link rel="apple-touch-icon" href="icon-192.png">
 <title>言語化バトル - GengoScore</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -513,6 +518,11 @@ function nextRound() {
 document.getElementById('userInput').addEventListener('input', e => {
   document.getElementById('charCount').textContent = e.target.value.length;
 });
+
+// Register service worker
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
 </script>
 </body>
 </html>
