Rename to WordShot

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="theme-color" content="#0a0a0a">
 <link rel="manifest" href="manifest.json">
 <link rel="apple-touch-icon" href="icon-192.png">
-<title>言語化バトル - GengoScore</title>
+<title>WordShot - 言葉で撃ち抜け</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body {
@@ -267,8 +267,8 @@
 <body>
 <div class="container">
   <div class="header">
-    <h1>🔥 GengoScore</h1>
-    <p>言語化力を鍛えろ。絵を見て、言葉で伝えろ。</p>
+    <h1>🎯 WordShot</h1>
+    <p>言葉で撃ち抜け。見たものを、正確に。</p>
   </div>
 
   <!-- Start -->
